스크롤 진행도 기능 추가

--- a/index.css
+++ b/index.css
@@ -33,6 +33,9 @@ li::marker {
     }
 }
 
+body {-ms-overflow-style:none; }
+body::-webkit-scrollbar { display:none; }
+
 body {
     font-family: IM_Hyemin;
     line-height: 1.7;
