--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'IM_Hyemin';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
+  font-weight: 600;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'IM_Hyemin';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Regular.woff2') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+html {
+  font-size: 26px;
+}
+
+li::marker {
+  color: red;
+  font-size: 1.5em;
+}
+
+@media (max-width: 1400px) {
+  html {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 800px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+body {-ms-overflow-style:none; }
+body::-webkit-scrollbar { display:none; }
+
+body {
+  font-family: IM_Hyemin;
+  line-height: 1.5;
+  padding: 1.2rem;
+  margin: 0;
+  color: #333;
+}
+
+.container {
+  width: 100%;
+  max-width: 45rem;
+  margin: auto;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ddd;
+  margin: 1em 0; padding: 0;
+}
+
+ul {
+  margin: 0;
+}
+
+li::marker {
+  color: dodgerblue;
+}
+
+li {
+  font-size: 0.8rem;
+}
+
+.App {
+  max-width: 1600px;
+  margin: auto;
 }
